  * Add the ability to vary the user (Closes: #872412)
  * Heavy refactoring to support > 2 builds.
  * Add a variation config language to be able to configure the specifics of
    different variations, and to make it easier to configure further builds.
  * Deprecate the --dont-vary flag, add a --vary flag for better composability.

  [ Mattia Rizzolo ]
  * Bump Standards-Version to 4.0.0.
    + Use https for the Format URI in debian/copyright.
  * Bump debhelper compat level to 10.

  [ Santiago Torres ]
  * Abstract parts of autopkgtest to support running on non-Debian systems.
  * Add a --host-distro flag to support that too.

 -- Ximin Luo <infinity0@debian.org>  Wed, 12 Jul 2017 13:53:05 +0200

reprotest (0.6.2) unstable; urgency=medium

  * Add a documentation section on "Known bugs".
  * Move developer documentation away from the man page.
  * Mention release instructions in the previous changelog.

 -- Ximin Luo <infinity0@debian.org>  Tue, 09 May 2017 21:56:22 +0200

reprotest (0.6.1) unstable; urgency=medium

  [ Ximin Luo ]
  * Preserve directory structure when copying artifacts. Otherwise hash output
    on a successful reproduction sometimes fails, because find(1) can't find
    the artifacts using the original artifact_pattern.

  [ Chris Lamb ]
  * Add proper release instructions and a keyring.

 -- Ximin Luo <infinity0@debian.org>  Tue, 09 May 2017 19:56:29 +0200

reprotest (0.6) unstable; urgency=medium

  * When a reproduction succeeds, only output hashes of the artifacts rather
    than everything in the current directory.
  * Remove unimplemented variations from README.
  * Rename some variations:
      path -> exec_path, to distinguish it from build_path
      faketime -> time, since users care about interface not implementation
  * Fix a bug involving --store-dir and hash output.
  * Add a --config-file option and fix the loading of configs.
  * Add a man page. (Closes: #833282)
  * Improve logging so it's properly controlled by --verbosity.
