@@ -11,6 +11,7 @@ reprotest (0.7) UNRELEASED; urgency=medium
   * Add a variation config language to be able to configure the specifics of
     different variations, and to make it easier to configure further builds.
   * Deprecate the --dont-vary flag, add a --vary flag for better composability.
+  * Support >2 builds using the new --extra-build flag.
 
   [ Mattia Rizzolo ]
   * Bump Standards-Version to 4.0.0.
